--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Mentoring</title>
 </head>
-<body>
+<body >
     <header>
         <nav>
             <img class="img-nav" src="./assets/img/jpmorgan.jpeg" alt="Logo-JP-Morgan">
             <img class="img-nav" src="./assets/img/Logo-Pescar-completo.png" alt="Logo-Pescar">
         </nav>
     </header>
+    <main>
+        <h1>Mentoring</h1>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
