--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Mentoring</title>
 </head>
-<body >
+<body>
     <header>
         <nav>
             <img class="img-nav" src="./assets/img/jpmorgan.jpeg" alt="Logo-JP-Morgan">
@@ -15,9 +15,14 @@
         </nav>
     </header>
     <main>
-        <h1>Mentoring</h1>
+        <section class="banner">
+            <h1>¡Bienvenidos!</h1>
+            <h2>Agradecemos de antemano esta gran oportunidad y su importante labor</h2>
+        </section>
+        <section id="cards">
+        </section>
     </main>
-
+    <script src="./assets/js/cards.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
