--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h1>¡Bienvenidos!</h1>
             <h2>Agradecemos de antemano esta gran oportunidad y su importante labor</h2>
         </section>
+        <input id="search-input" type="text">
         <section id="cards">
         </section>
     </main>
