--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             <h1>¡Bienvenidos!</h1>
             <h2>Agradecemos de antemano esta gran oportunidad y su importante labor</h2>
         </section>
-        <input id="search-input" type="text">
+        <div class="buscador">
+            <input id="search-input" type="text" placeholder="Ingrese su nombre...">
+            <img class="lupa" src="./assets/img/search.png" alt="search">
+        </div>
         <section id="cards">
         </section>
     </main>
