--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
             <img class="img-nav" src="./assets/img/Logo-Pescar-completo.png" alt="Logo-Pescar">
         </nav>
     </header>
-
+    <main>
+        <section class="banner">
+            <h1>¡Bienvenidos!</h1>
+            <h2>Agradecemos de antemano esta gran oportunidad y su importante labor</h2>
+        </section>
+        <div class="buscador">
+            <input id="search-input" type="text" placeholder="Ingrese su nombre...">
+            <img class="lupa" src="./assets/img/search.png" alt="search">
+        </div>
+        <section id="cards">
+        </section>
+    </main>
+    <script src="./assets/js/cards.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
