correción data, style general

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <img class="img-nav" src="./assets/img/jpmorgan.jpeg" alt="Logo-JP-Morgan">
-            <img class="img-nav" src="./assets/img/Logo-Pescar-completo.png" alt="Logo-Pescar">
+            <img class="img-nav logo-pescar" src="./assets/img/Logo-Pescar-completo.png" alt="Logo-Pescar">
         </nav>
     </header>
     <main>
