--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Mentoring</title>
 </head>
+
 <body>
     <header>
         <nav>
             <img class="img-nav" src="./assets/img/jpmorgan.jpeg" alt="Logo-JP-Morgan">
-            <img class="img-nav" src="./assets/img/Logo-Pescar-completo.png" alt="Logo-Pescar">
+            <img class="img-nav logo-pescar logo-loreal" src="./assets/img/loreal-logo.png" alt="logo-loreal">
+            <img class="img-nav logo-pescar" src="./assets/img/Logo-Pescar-completo.png" alt="Logo-Pescar">
+            <img class="img-nav logo-pescar" src="./assets/img/Salesforce_logo.png" alt="salesforce-logo">
+            <img class="img-nav logo-pescar" src="./assets/img/makro-logo.png" alt="makro-logo">
         </nav>
     </header>
     <main>
@@ -27,6 +36,9 @@
         </section>
     </main>
     <script src="./assets/js/cards.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
